# IHM

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  compare_tests.sh  generate_bdd.sh  ihm.sh  pyproject.toml  runtest.sh
conf/: conf  scripts.conf
docs/: hmi_userguide.docx
scripts/: .coverage  ihm.py  unit_tests.py
scripts/bdd_generator/: compare_tests.py  generate_BDD_files.py  generate_functions.py
scripts/results_generator/: generate_results.py  generate_results_functions.py
tests/generate_bdd/generate_bdd_elements_fail_1/Configuration/: Enumerations.conf
tests/generate_bdd/generate_bdd_elements_fail_5/Configuration/: GridConfigurationStepForCampaign.conf
tests/import_files/test_7/Configuration/: Labels.xml
tests/organised_tests/test_camapaign_acp_004/Configuration/: ResultConsolidationRules.xml
tests/results_unit_tests/: min_conf_file
tests/results_unit_tests/unit_test_import_script/: tst_acp-20_IVV.xml  tst_acp-21_IVV.xml  tst_case-3_IVV.xml  tst_case-4_IVV.xml  tst_case-5_IVV.xml  tst_case-6_IVV.xml  tst_case-7_IVV.xml  tst_case-8_IVV.xml
tests/suite_bdd/: suite.conf
tests/suite_bdd/tst_case-1/: test.feature
tests/suite_bdd/tst_case-10/: test.feature
tests/suite_bdd/tst_case-12/: test.feature
tests/suite_bdd/tst_case-2/: test.feature
tests/suite_bdd/tst_case-3/: test.feature
tests/suite_bdd/tst_case-5/: test.feature
tests/suite_bdd/tst_case-6/: test.feature
tests/suite_bdd/tst_case-7/: test.feature
tests/suite_bdd/tst_case-8/: test.feature  test.py
tests/suite_bdd/tst_case-9/: test.feature
(+129 files in other folders)
