[tool.poetry]
name = "ivvq-tests"
version = "0.1.0"
description = "Project that contains all the tests used by the IVVQ Team for the ACP Project"
authors = ["Eric PAPAZIAN <eric.papazian@external.thalesgroup.com>"]

[tool.poetry.dependencies]
python = "^3.8"
black = "^22.3.0"
flake8 = "^4.0.1"
lxml = "^4.8.0"
pytest = "^7.1.2"
coverage = "^6.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
